--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pnew",
-  "version": "0.3.1",
+  "version": "0.3.2-alpha",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
